<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/introduction"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/introduction_tip"
                    android:textColor="#000"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/link_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/viewOnGithub"
                    android:textColor="#4472c4"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/menu"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#000"
                    android:text="@string/menu_tip"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginTop="15dp"
                    android:text="@string/license"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/license_tip"
                    android:textColor="#000"
                    android:textSize="12dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:tint="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary"
        android:src="@mipmap/img_maintab_function"/>

</RelativeLayout>